--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <br>
     <img style="border: 2px solid thistle; 50px" src="tree.jpg" width="10%">
 
-    <a href="parcial1/portafolio_parcial1.html">Portafolio Parcial #1</a>
+    <a href="parcial1/Practica1_Elementos_HTML_Parte1.htlm.html">Portafolio Parcial #1</a>
 </body>
 </html>
