--- a/Portafolio_Parcial1.html
+++ b/Portafolio_Parcial1.html
@@ -3,43 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practicas parcial #1</title>
+    <title>Repositorio</title>
 </head>
 <body>
-    <table border="1s">
+    <table border="2">
         <thead>
             <tr>
-                <th>Nombre De La Practica</th>
-                <th>Descripcion</th>
-                <th>Hipervinculo</th>
+                <th>Nombre de la práctica</th>
+                <th>descripción</th>
+                <th>hipervínculo</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>Practica #1</td>
-                <td>Elementos basicos de HTML Parte 1</td>
-                <td><a href="parcial1/Practica1_Elementos_HTML_Parte1.htlm.html">Ir a la Practica</a></td>
+                 <td>Practica #1</td>
+                 <td>elementos basicos html parte 1</td>
+                 <td><a href="parcial1/Practica1_Elementos_HTML_Parte1.htlm.html">Practica</a></td>
             </tr>
-        </tbody>
-        <tbody>
             <tr>
                 <td>Practica #2</td>
-                <td>Elementos basicos de HTML Parte 2</td>
-                <td><a href="parcial1/Practica2.html">Ir a la Practica</a></td>
+                <td>Practica #2</td>
+                <td><a href="parcial1/Practica2.html">Practica</a></td>
             </tr>
-        </tbody>
-        <tbody>
             <tr>
                 <td>Practica #3</td>
-                <td> Elemento HTML y propiedades CSS</td>
-                <td><a href="parcial1/practica3.html">Ir a la Practica</a></td>
+                <td>Elemento HTML y propiedades CSS</td>
+                <td><a href="parcial1/practica3.html">Practica</a></td>
             </tr>
-        </tbody>
-        <tbody>
             <tr>
                 <td>Practica #4</td>
-                <td> Practica #4 Manejo de imagenes en HTML</td>
-                <td><a href="parcial1/Practica #4 Manejo de imagenes en HTML.html">Ir a la Practica</a></td>
+                <td>Manejo de imagenes en HTML</td>
+                <td><a href="parcial1/Practica #4 Manejo de imagenes en HTML.html">Practica</a></td>
             </tr>
         </tbody>
     </table>
