--- a/Portafolio_Parcial1.html
+++ b/Portafolio_Parcial1.html
@@ -18,7 +18,7 @@
             <tr>
                  <td>Practica #1</td>
                  <td>elementos basicos html parte 1</td>
-                 <td><a href="parcial1/Practica1_Elementos_HTML_Parte1.htlm.html">Practica</a></td>
+                 <td><a href="parcial1/Practica1_Elementos_HTML_Parte1.htlm">Practica</a></td>
             </tr>
             <tr>
                 <td>Practica #2</td>
