--- a/Portafolio_Parcial1.html
+++ b/Portafolio_Parcial1.html
@@ -18,7 +18,7 @@
             <tr>
                  <td>Practica #1</td>
                  <td>elementos basicos html parte 1</td>
-                 <td><a href="parcial1/Practica1_Elementos_HTML_Parte1.htlm.html">Practica</a></td>
+                 <td><a href="parcial1/Practica1_Elementos_HTML_Parte1.htlm">Practica</a></td>
             </tr>
             <tr>
                 <td>Practica #2</td>
@@ -33,7 +33,12 @@
             <tr>
                 <td>Practica #4</td>
                 <td>Manejo de imagenes en HTML</td>
-                <td><a href="parcial1/Practica#4ManejodeimagenesenHTML.html">Practica</a></td>
+                <td><a href="Parcial1/Practica#4ManejodeimagenesenHTML.html">Practica</a></td>
+            </tr>
+            <tr>
+                <td>Practica #5</td>
+                <td>Manejo de tablas en HTML</td>
+                <td><a href="parcial1/practica5.html">Practica</a></td>
             </tr>
         </tbody>
     </table>
