Mendoza Moreno Amanda 08/03/2024

--- a/Portafolio_Parcial1.html
+++ b/Portafolio_Parcial1.html
@@ -40,6 +40,11 @@
                 <td>Manejo de tablas en HTML</td>
                 <td><a href="parcial1/practica5.html">Practica</a></td>
             </tr>
+            <tr>
+                <td>Practica #6</td>
+                <td>Formularios en HTML para registro de CLIENTE</td>
+                <td><a href="parcial1/practica6.html">Practica</a></td>
+            </tr>
         </tbody>
     </table>
 </body>
