--- a/Portafolio_Parcial1.html
+++ b/Portafolio_Parcial1.html
@@ -33,7 +33,7 @@
             <tr>
                 <td>Practica #4</td>
                 <td>Manejo de imagenes en HTML</td>
-                <td><a href="Parcial1/Practica#4ManejodeimagenesenHTML.html">Practica</a></td>
+                <td><a href="parcial1/Practica4.html">Practica</a></td>
             </tr>
             <tr>
                 <td>Practica #5</td>
