--- a/parcial1/practica6.html
+++ b/parcial1/practica6.html
@@ -40,9 +40,9 @@
         <input type="checkbox" name="Pasatiempos"> Practicar otro deporte <br><br>
 
         <label for="">Comentario</label><br>
-        <textarea name="" id="" cols="100" rows="10" placeholder="Comentario"></textarea>
+        <textarea name="" id="" cols="100" rows="10" placeholder="Comentario"></textarea><br><br>
 
-        <label for="">Selecciona una Foto:</label>
+        <label for="">Selecciona una Foto:</label><br>
         <input type="file"><br><br>
 
         <input type="submit" value="guardar cliente"><br><br>
