--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>Nombre: Mendoza Moreno Amanda</h2>
     <h3>Materia: Desarrolla Aplicaciones web que se ejecutan en el servidor</h3>
     <br>
-    <img style="border: 2px solid thistle; border-radius: 100px" src="Perfil.jpeg" alt="" width="10%">
+    <img style="border: 2px solid thistle; border-radius: 1px" src="Perfil.jpeg" alt="" width="20%"><br><br>
 
     <a href="Portafolio_Parcial1.html">Portafolio Parcial #1</a>
 </body>
