--- a/Portafolio_Parcial1.html
+++ b/Portafolio_Parcial1.html
@@ -45,6 +45,11 @@
                 <td>Formularios en HTML para registro de CLIENTE</td>
                 <td><a href="parcial1/practica6.html">Practica</a></td>
             </tr>
+            <tr>
+                <td>Practica #7</td>
+                <td>Pacicionamiento en HTML</td>
+                <td><a href="parcial1/Practica7.html">Practica</a></td>
+            </tr>
         </tbody>
     </table>
 </body>
