--- a/Portafolio_Parcial1.html
+++ b/Portafolio_Parcial1.html
@@ -50,6 +50,12 @@
                 <td>Pacicionamiento en HTML</td>
                 <td><a href="parcial1/Practica7.html">Practica</a></td>
             </tr>
+            <tr>
+                <td>Practica #8</td>
+                <td>Juego de loteria</td>
+                <td><a href="parcial1/Practica8.html">Practica</a></td>
+            </tr>
+
         </tbody>
     </table>
 </body>
