--- a/Portafolio_Parcial1.html
+++ b/Portafolio_Parcial1.html
@@ -56,6 +56,11 @@
                 <td><a href="parcial1/Practica8.html">Practica</a></td>
             </tr>
 
+            <tr>
+                <td>Practica #9</td>
+                <td>Manejo de CSS</td>
+                <td><a href="parcial1/Practica9.html">Practica</a></td>
+            </tr>
         </tbody>
     </table>
 </body>
