--- a/Portafolio_Parcial1.html
+++ b/Portafolio_Parcial1.html
@@ -61,6 +61,11 @@
                 <td>Manejo de CSS</td>
                 <td><a href="parcial1/Practica9.html">Practica</a></td>
             </tr>
+            <tr>
+                <td>Practica #10</td>
+                <td>CSS parte 2</td>
+                <td><a href="parcial1/Practica10.html">Practica</a></td>
+            </tr>
         </tbody>
     </table>
 </body>
