--- a/parcial1/Practica10.html
+++ b/parcial1/Practica10.html
@@ -17,7 +17,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia reprehenderit porro possimus tenetur asperiores labore sunt atque corporis voluptatem nam voluptatum, delectus numquam! Eius explicabo minus doloremque, quos veritatis ullam.
     </div><br>
     <a href=""class="link">Hipervínculo</a>
-    <h2>Mendoza Moreno Amanda 14/03/24</h2>
+    <h2>Mendoza Moreno Amanda 14/03/24 ----</h2>
 
 </body>
 </html>
