--- a/parcial1/Practica2.html
+++ b/parcial1/Practica2.html
@@ -12,6 +12,6 @@
     <a style="color: darkslateblue;" href="https://www.google.com/">Buscar en google</a><br>
     <a style="color: cyan;" href="https://github.com/amandamendoza/DesarrolloWeb2024-1">Mi cuenta de github</a><br>
 
-    <h2>Mendoza Moreno Amanda 14/03/24</h2>
+    <h2>Mendoza Moreno Amanda </h2>
 </body>
 </html>
