--- a/parcial1/Practica8.html
+++ b/parcial1/Practica8.html
@@ -66,7 +66,7 @@
             </tr>
         </table>
     </div>
-    <h2>Mendoza Moreno Amanda 14/03/24</h2>
+    <h2>Mendoza Moreno Amanda </h2>
 
 </body>
 </html>
