--- a/parcial1/Practica9.html
+++ b/parcial1/Practica9.html
@@ -27,6 +27,6 @@
             <li>opcion 4</li>
         </ul>
     </span>
-    <h2>Mendoza Moreno Amanda 14/03/24</h2>
+    <h2>Mendoza Moreno Amanda </h2>
 </body>
 </html>
