--- a/parcial2/practica1.html
+++ b/parcial2/practica1.html
@@ -33,6 +33,7 @@
         <div class="col-md-3 card">col-md-3 card</div>
         <div class="col-md-3 card">col-md-3 card</div>
     </div>
+    <p>Mendoza Moreno Amanda</p>
 
     <script src="js/bootstrap.js"></script>
 </body>
