--- a/parcial2/practica4.html
+++ b/parcial2/practica4.html
@@ -70,6 +70,7 @@
     </div>
 
     <div class="container">
+        <h1>Dropdowns</h1>
         <div class="row">
             <!-- Example single danger button -->
             <div class="btn-group">
