--- a/amazon/index.html
+++ b/amazon/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Proyecto de página</title>
 </head>
 <body>
-    <p>HOLI</p>
+    <p>En proceso...</p>
 </body>
 </html>
