--- a/amazon/index.html
+++ b/amazon/index.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto de página</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <script src="js/code.jquery.com_jquery-3.7.1.js"></script>
 </head>
 <body>
-    <p>En proceso...!</p>
+    <p>En proceso...</p>
+    <p>26/04/2024</p>
+
+    <script src="js/bootstrap.js"></script>
 </body>
 </html>
