--- a/amazon/index.html
+++ b/amazon/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto de página</title>
     <link rel="stylesheet" href="css/bootstrap.css">
+  
     <script src="js/code.jquery.com_jquery-3.7.1.js"></script>
+
 
 </head>
 <body>
@@ -55,7 +57,7 @@
       </div><br><br>
 
 
-      <center><h2 class="elementor-heading-title elementor-size-default">¡Conoce el sabor de la alegría!</h2></center>
+      <center><h1="elementor-heading-title elementor-size-default" style="color: #0079C2;font-family:Arial Narrow; font-size: large;"><b>¡Conoce el sabor de la alegría!</b></h1></center>
 
     <script src="js/bootstrap.js"></script>
 </body>
