--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Portafolio</title>
+    <style> 
+        body { background:rgb(185, 185, 223)}
+        a:hover{color:  rgb(86, 122, 241);}
+    </style> 
 </head>
 <body>
-    <h1>Mi Portafolio</h1>
-    <h2>Nombre: Mendoza Moreno Amanda</h2>
-    <h3>Materia: Desarrolla Aplicaciones web que se ejecutan en el servidor</h3>
-    <br>
-    <img style="border: 2px solid thistle; border-radius: 1px" src="Perfil.jpeg" alt="" width="20%"><br><br>
+    <center>
+        <h1>Mi Portafolio</h1>
+        <h2>Nombre: Mendoza Moreno Amanda</h2>
+        <h3>Materia: Desarrolla Aplicaciones web que se ejecutan en el servidor</h3>
+        <br>
+        <img style="border: 2px solid thistle; border-radius: 1px" src="yo.jpeg" alt="" width="25%"><br><br>
 
-    <a href="Portafolio_Parcial1.html">Portafolio Parcial #1</a>
+        <a href="Portafolio_Parcial1.html" target="_blank">Portafolio Parcial #1</a><br><br>
+        <a href="Portafolio_Parcial2.html" target="_blank">Portafolio Parcial #2</a>
+    </center>
 </body>
 </html>
