--- a/Portafolio_Parcial1.html
+++ b/Portafolio_Parcial1.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Repositorio</title>
+    <style> 
+        body { background:rgb(185, 185, 223)}
+        a:hover{color:  rgb(86, 122, 241);}
+    </style> 
 </head>
 <body>
     <table border="2">
@@ -18,53 +22,53 @@
             <tr>
                  <td>Practica #1</td>
                  <td>elementos basicos html parte 1</td>
-                 <td><a href="parcial1/Practica1_Elementos_HTML_Parte1.html">Practica</a></td>
+                 <td><a href="parcial1/Practica1_Elementos_HTML_Parte1.html" target="_blank">Practica</a></td>
             </tr>
             <tr>
                 <td>Practica #2</td>
                 <td>Practica #2</td>
-                <td><a href="parcial1/Practica2.html">Practica</a></td>
+                <td><a href="parcial1/Practica2.html" target="_blank">Practica</a></td>
             </tr>
             <tr>
                 <td>Practica #3</td>
                 <td>Elemento HTML y propiedades CSS</td>
-                <td><a href="parcial1/practica3.html">Practica</a></td>
+                <td><a href="parcial1/practica3.html" target="_blank">Practica</a></td>
             </tr>
             <tr>
                 <td>Practica #4</td>
                 <td>Manejo de imagenes en HTML</td>
-                <td><a href="parcial1/Practica4.html">Practica</a></td>
+                <td><a href="parcial1/Practica4.html" target="_blank">Practica</a></td>
             </tr>
             <tr>
                 <td>Practica #5</td>
                 <td>Manejo de tablas en HTML</td>
-                <td><a href="parcial1/practica5.html">Practica</a></td>
+                <td><a href="parcial1/practica5.html" target="_blank">Practica</a></td>
             </tr>
             <tr>
                 <td>Practica #6</td>
                 <td>Formularios en HTML para registro de CLIENTE</td>
-                <td><a href="parcial1/practica6.html">Practica</a></td>
+                <td><a href="parcial1/practica6.html" target="_blank">Practica</a></td>
             </tr>
             <tr>
                 <td>Practica #7</td>
                 <td>Pacicionamiento en HTML</td>
-                <td><a href="parcial1/Practica7.html">Practica</a></td>
+                <td><a href="parcial1/Practica7.html" target="_blank">Practica</a></td>
             </tr>
             <tr>
                 <td>Practica #8</td>
                 <td>Juego de loteria</td>
-                <td><a href="parcial1/Practica8.html">Practica</a></td>
+                <td><a href="parcial1/Practica8.html" target="_blank">Practica</a></td>
             </tr>
 
             <tr>
                 <td>Practica #9</td>
                 <td>Manejo de CSS</td>
-                <td><a href="parcial1/Practica9.html">Practica</a></td>
+                <td><a href="parcial1/Practica9.html" target="_blank">Practica</a></td>
             </tr>
             <tr>
                 <td>Practica #10</td>
                 <td>CSS parte 2</td>
-                <td><a href="parcial1/Practica10.html">Practica</a></td>
+                <td><a href="parcial1/Practica10.html target="_blank"">Practica</a></td>
             </tr>
         </tbody>
     </table>
