--- a/Portafolio_Parcial2.html
+++ b/Portafolio_Parcial2.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Repositorio</title>
+    <style> 
+        body { background:rgb(185, 185, 223)}
+        a:hover{color:  rgb(86, 122, 241);}
+    </style> 
 </head>
 <body>
     <table border="2">
