--- a/Portafolio_Parcial2.html
+++ b/Portafolio_Parcial2.html
@@ -22,37 +22,37 @@
             <tr>
                 <td>Práctica #1</td>
                 <td>Introducción al bootstrap</td>
-                <td><a href="parcial2/practica1.html" target="_blank">Ir a la práctica 1</a></td>
+                <td><a href="parcial2/practica1.html">Ir a la práctica 1</a></td>
             </tr>
 
             <tr>
                 <td>Práctica #2</td>
                 <td>Practica #2- Grids en bootstrap</td>
-                <td><a href="parcial2/practica2.html" target="_blank">Ir a la práctica 2</a></td>
+                <td><a href="parcial2/practica2.html">Ir a la práctica 2</a></td>
             </tr>
 
             <tr>
                 <td>Práctica #3</td>
                 <td>Practica #3-Componentes de botstrap</td>
-                <td><a href="parcial2/practica3.html" target="_blank">Ir a la práctica 3</a></td>
+                <td><a href="parcial2/practica3.html">Ir a la práctica 3</a></td>
             </tr>
 
             <tr>
                 <td>Práctica #4</td>
                 <td>Practica #4-Componentes de botstrap parte 2</td>
-                <td><a href="parcial2/practica4.html" target="_blank">Ir a la práctica 4</a></td>
+                <td><a href="parcial2/practica4.html">Ir a la práctica 4</a></td>
             </tr>
 
             <tr>
                 <td>Práctica #5</td>
                 <td>Practica #5- Componentes en bootstrap parte #3</td>
-                <td><a href="parcial2/practica5.html" target="_blank">Ir a la práctica 5</a></td>
+                <td><a href="parcial2/practica5.html">Ir a la práctica 5</a></td>
             </tr>
 
             <tr>
                 <td>Práctica #6</td>
                 <td>Practica #6- Manejo de tablas con Boostrap</td>
-                <td><a href="parcial2/practica6.html" target="_blank">Ir a la práctica 6</a></td>
+                <td><a href="parcial2/practica6.html">Ir a la práctica 6</a></td>
              </tr>
 
 
