23/05/2024 Actualizacion de portafolio

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <img style="border: 2px solid thistle; border-radius: 1px" src="yo.jpeg" alt="" width="25%"><br><br>
 
         <a href="Portafolio_Parcial1.html" target="_blank">Portafolio Parcial #1</a><br><br>
-        <a href="Portafolio_Parcial2.html" target="_blank">Portafolio Parcial #2</a>
+        <a href="Portafolio_Parcial2.html" target="_blank">Portafolio Parcial #2</a><br><br>
+        <a href="amazon/index.html" target="_blank">Pagina web</a>
     </center>
 </body>
 </html>
