--- a/Portafolio_Parcial3.html
+++ b/Portafolio_Parcial3.html
@@ -22,37 +22,37 @@
             <tr>
                 <td>captura de pantalla #1</td>
                 <td>Introducción al bootstrap</td>
-                <td><a href="Parcial3/Captura de pantalla (1).png">Ir a la práctica 1</a></td>
+                <td><a href="Parcial3/Captura de pantalla (1).png">Ir a la Captura 1</a></td>
             </tr>
         
             <tr>
                 <td>captura de pantalla #2</td>
                 <td>Introducción al bootstrap</td>
-                <td><a href="Parcial3/Captura de pantalla (2).png">Ir a la práctica 1</a></td>
+                <td><a href="Parcial3/Captura de pantalla (2).png">Ir a la Captura 2</a></td>
             </tr>
 
             <tr>
                 <td>captura de pantalla #3</td>
                 <td>Introducción al bootstrap</td>
-                <td><a href="Parcial3/Captura de pantalla (3).png">Ir a la práctica 1</a></td>
+                <td><a href="Parcial3/Captura de pantalla (3).png">Ir a la Captura 3</a></td>
             </tr>
 
             <tr>
                 <td>captura de pantalla #4</td>
                 <td>Introducción al bootstrap</td>
-                <td><a href="Parcial3/Captura de pantalla (4).png">Ir a la práctica 1</a></td>
+                <td><a href="Parcial3/Captura de pantalla (4).png">Ir a la Captura4 </a></td>
             </tr>
 
             <tr>
                 <td>Práctica #3</td>
                 <td>Introducción al bootstrap</td>
-                <td><a href="Parcial3/Practica3/cetis.sql">Ir a la práctica 1</a></td>
+                <td><a href="Parcial3/Practica3/cetis.sql">Ir a la Practica 3 </a></td>
             </tr>
 
             <tr>
                 <td>Práctica #4</td>
                 <td>Introducción al bootstrap</td>
-                <td><a href="Parcial3/Practica4.jpeg">Ir a la práctica 1</a></td>
+                <td><a href="Parcial3/Practica4.jpeg">Ir a la práctica 4</a></td>
             </tr>
 
             <tr>
@@ -65,25 +65,25 @@
             <tr>
                 <td>Práctica #6</td>
                 <td>Introducción al bootstrap</td>
-                <td><a href="Parcial3/Practica6/spotify.sql">Ir a la práctica 5</a></td>
+                <td><a href="Parcial3/Practica6/spotify.sql">Ir a la práctica 6</a></td>
             </tr>
 
             <tr>
                 <td>Práctica #7</td>
                 <td>Introducción al bootstrap</td>
-                <td><a href="Parcial3/Practica7/spotify.sql">Ir a la práctica 5</a></td>
+                <td><a href="Parcial3/Practica7/spotify.sql">Ir a la práctica 7</a></td>
             </tr>
 
             <tr>
                 <td>Práctica #8</td>
                 <td>Introducción al bootstrap</td>
-                <td><a href="Parcial3/practica8/spotify.sql">Ir a la práctica 5</a></td>
+                <td><a href="Parcial3/practica8/spotify.sql">Ir a la práctica 8</a></td>
             </tr>
 
             <tr>
                 <td>Práctica #9</td>
                 <td>Introducción al bootstrap</td>
-                <td><a href="Parcial3/Practica 9.jpeg">Ir a la práctica 5</a></td>
+                <td><a href="Parcial3/Practica 9.jpeg">Ir a la práctica 9</a></td>
             </tr>
         </tbody>
     </table>
