--- a/Parcial3/proyectofinal/index.html
+++ b/Parcial3/proyectofinal/index.html
@@ -33,7 +33,7 @@
                 <div style="width: 300px;">
                     <h4 style="background-color: cornflowerblue;"> Consulta 02: obtener el listado de cursos y las asignaturas</h4>
                 </div>
-                <div style="width:  400px;">
+                <div style="width:  600px;">
                     <h3 style="background-color: cadetblue;">
                         SELECT curso.nombreDescriptivo,asignatura.nombre<br>
                         FROM curso <br> 
@@ -52,7 +52,7 @@
                 <div style="width: 300px;">
                     <h4 style="background-color: cornflowerblue;"> Consulta 03: obtener listado (NOMBRE Y APELLIDO) de alumnos que tengan beca</h4>
                 </div>
-                <div style="width:  400px;">
+                <div style="width:  425px;">
                     <h3 style="background-color: cadetblue;">
                         SELECT alumno.nombre, alumno.apellido1, alumno.apellido2 FROM alumno WHERE beca like 'si';
                     </h3>
@@ -68,7 +68,7 @@
                 <div style="width: 300px;">
                     <h4 style="background-color: cornflowerblue;"> Consulta 04: obtener listado de profesores (NOMBRE Y APELLIDO), y su nombre contacto</h4>
                 </div>
-                <div style="width:  400px;">
+                <div style="width:  425px;">
                     <h3 style="background-color: cadetblue;">
                         SELECT profesor.nombre, profesor.apellido1,<br>
                         tlfcontactoprof.telefono FROM profesor INNER JOIN tlfcontactoprof<br>
@@ -86,12 +86,19 @@
                 <div style="width: 300px;">
                     <h4 style="background-color: cornflowerblue;"> Consulta 05: obtener listado de alumno (todos los campos) que estan inscritos a la asignatura de programacion</h4>
                 </div>
-                <div style="width:  400px;">
+                <div style="width:  425px;">
                     <h3 style="background-color: cadetblue;">
-                        hola
+                        SELECT alumno.*, asignatura.nombre 
+                        FROM alumno 
+                        INNER JOIN matricula ON matricula.idAlumno = alumno.idAlumno
+                        INNER JOIN asignatura on asignatura.idAsignatura = matricula.idAsignatura 
+                        WHERE asignatura.idAsignatura LIKE 'ASOO9'SELECT alumno.*, asignatura.nombre 
+                        FROM alumno INNER JOIN matricula ON matricula.idAlumno = alumno.idAlumno 
+                        INNER JOIN asignatura on asignatura.idAsignatura = matricula.idAsignatura 
+                        WHERE asignatura.idAsignatura LIKE 'ASOO9'
                     </h3>
                 </div>
-                <img src="Consulta 03.png" alt="" width="1000px">
+                <img src="Consulta 05.png" alt="" width="1000px">
             </div>
         </div>
     </div><br><br>
@@ -102,7 +109,7 @@
                 <div style="width: 300px;">
                     <h4 style="background-color: cornflowerblue;"> Consulta 06: obtener listado de profesor y asignatura que implica</h4>
                 </div>
-                <div style="width:  400px;">
+                <div style="width:  425px;">
                     <h3 style="background-color: cadetblue;">
                         hola
                     </h3>
@@ -118,7 +125,7 @@
                 <div style="width: 300px;">
                     <h4 style="background-color: cornflowerblue;"> Consulta 07: obtener listado (NOMBRE Y APELLIDO) de alumnos que tengan beca</h4>
                 </div>
-                <div style="width:  400px;">
+                <div style="width:  425px;">
                     <h3 style="background-color: cadetblue;">
                         hola
                     </h3>
@@ -134,7 +141,7 @@
                 <div style="width: 300px;">
                     <h4 style="background-color: cornflowerblue;"> Consulta 08: obtener listado (NOMBRE Y APELLIDO) de alumnos que tengan beca</h4>
                 </div>
-                <div style="width:  400px;">
+                <div style="width:  425px;">
                     <h3 style="background-color: cadetblue;">
                         hola
                     </h3>
@@ -150,7 +157,7 @@
                 <div style="width: 300px;">
                     <h4 style="background-color: cornflowerblue;"> Consulta 09: obtener listado (NOMBRE Y APELLIDO) de alumnos que tengan beca</h4>
                 </div>
-                <div style="width:  400px;">
+                <div style="width:  425px;">
                     <h3 style="background-color: cadetblue;">
                         hola
                     </h3>
@@ -166,7 +173,7 @@
                 <div style="width: 300px;">
                     <h4 style="background-color: cornflowerblue;"> Consulta 10: obtener listado (NOMBRE Y APELLIDO) de alumnos que tengan beca</h4>
                 </div>
-                <div style="width:  400px;">
+                <div style="width:  425px;">
                     <h3 style="background-color: cadetblue;">
                         hola
                     </h3>
