--- a/Portafolio_Parcial3.html
+++ b/Portafolio_Parcial3.html
@@ -56,9 +56,12 @@
             </tr>
 
             <tr>
-                <td>Práctica #5</td>
-                <td>Introducción al bootstrap</td>
+                <td  rowspan="2">Práctica #5</td>
+                <td rowspan="2">Introducción al bootstrap</td>
                 <td><a href="Parcial3/Practica5/captura5.png">Ir a la práctica 5</a></td>
+            </tr>
+            <tr>
+
                 <td><a href="Parcial3/Practica5/spotify.sql">Ir a la práctica 5</a></td>
             </tr>
 
@@ -82,6 +85,11 @@
 
             <tr>
                 <td>Práctica #9</td>
+                <td>Introducción al bootstrap</td>
+                <td><a href="Parcial3/Practica 9.jpeg">Ir a la práctica 9</a></td>
+            </tr>
+            <tr>
+                <td>Práctica #10</td>
                 <td>Introducción al bootstrap</td>
                 <td><a href="Parcial3/Practica 9.jpeg">Ir a la práctica 9</a></td>
             </tr>
