--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <a href="Portafolio_Parcial1.html" target="_blank">Portafolio Parcial #1</a><br><br>
         <a href="Portafolio_Parcial2.html" target="_blank">Portafolio Parcial #2</a><br><br>
         <a href="amazon/index.html" target="_blank">Pagina web</a><br><br>
-        <a href="Portafolio_Parcial3.html" target="_blank">Portafolio Parcial #3></a><br><br>
+        <a href="Portafolio_Parcial3.html" target="_blank">Portafolio Parcial #3</a><br><br>
+        <a href="Parcial3/proyectofinal/index.html" target="_blank">Proyecto final</a><br><br>
     </center>
 </body>
 </html>
