--- a/BasedeDatosWeb/Parcial 1/practica1.html
+++ b/BasedeDatosWeb/Parcial 1/practica1.html
@@ -29,7 +29,7 @@
             <option value="">Selecciona una orientacion sexual</option>
             <option value="pan sexual">pan sexual</option>
             <option value="gay">gay</option>
-            <option value="cesar">cesar</option>
+            <option value="hetero">hetero</option>
         </select> <br><br>
 
         
