--- a/BasedeDatosWeb/Parcial 1/practica2.html
+++ b/BasedeDatosWeb/Parcial 1/practica2.html
@@ -14,13 +14,13 @@
     <h1>Formulario de Registro de calificaciones</h1><hr>
     <form action="practica2.php" method="POST">
         <label for="">Nombre del Alumno:</label>
-        <input type="text" name="nombre" value="Varinia Yulianna Manjarrez Valencia">&nbsp;
+        <input type="text" name="nombre" value="Amanda Mendoza Moreno">&nbsp;
 
         <label for="">Fecha:</label>
         <input type="date" name="fecha" value="12/09/24">&nbsp;
 
         <label for="">Num. Control</label>  
-        <input type="text" value="22325061070333" name="num_control">&nbsp;
+        <input type="text" value="22325061070340" name="num_control">&nbsp;
 
         <h2>Captura las calificaciones</h2>
         <table border="1">
